# alteryx-to-sql-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-starter.yml
docs/: PROJECT_PLAN.md  architecture.md  phase1_parsing.md  phase2_chunking.md  phase3_translation.md  phase4_llm.md  phase5_assembly.md  phase6_cli.md  phase7_registry.md  setup-guide.md
examples/: BI_Aggregate Daily Simple_LDB-01.sql  BI_Aggregate Daily Simple_LDB-01.yxmd  BI_Aggregate Daily Simple_LDB-01_docs.md  hello_world.py
output/: BI_Aggregate Daily Simple_LDB-01.sql  BI_Aggregate Daily Simple_LDB-01_docs.md
scripts/: setup.ps1
src/: main.py
src/analysis/: __init__.py  liveness.py  llm_validator.py
src/assembly/: cte_builder.py  inliner.py  macro_handler.py  source_simplifier.py
src/catalog/: __init__.py  (+4 more)
standard_macros/: Base64_Encoder.yxmc  Cleanse.yxmc  CountRecords.yxmc  DateTimeNow.yxmc  Date_Filter.yxmc  FooterMacro.yxmc  Google_Analytics.yxmc  Google_Analytics_v5.yxmc  Google_Analytics_v6.yxmc  HeaderMacro.yxmc  HeatMap.yxmc  Imputation.yxmc  Imputation_v2.yxmc  Imputation_v3.yxmc  Legend_Builder.yxmc  Legend_Splitter.yxmc  MultiFieldBinning.yxmc  MultiFieldBinning_v2.yxmc  PearsonCorrCoeff.yxmc  PieWedgeTradeArea.yxmc  Pipe_to_Table.yxmc  RandomRecords.yxmc  SelectRecords.yxmc  SpearmanCorrCoeff.yxmc  WeightedAvg.yxmc
tests/: test_main.py
(+49 files in other folders)
